--- a/config/eyeslash_corne.conf
+++ b/config/eyeslash_corne.conf
@@ -16,7 +16,9 @@ CONFIG_ZMK_POINTING=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_ZMK_HID_REPORT_TYPE_NKRO=n
 
+# Display settings
 CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
 
 CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=8
 CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=8
