--- a/config/boards/shields/eyeslash_corne/eyeslash_corne_peripheral_right.conf
+++ b/config/boards/shields/eyeslash_corne/eyeslash_corne_peripheral_right.conf
@@ -29,4 +29,5 @@ CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
 
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
-CONFIG_ZMK_DISPLAY_STATUS_SCREEN_ROTATION=180
+CONFIG_SSD1306=y
+CONFIG_SSD1306_ROTATE_180=y
