--- a/config/eyeslash_corne.conf
+++ b/config/eyeslash_corne.conf
@@ -18,6 +18,8 @@ CONFIG_ZMK_HID_REPORT_TYPE_NKRO=n
 
 # Display settings
 CONFIG_ZMK_DISPLAY=y
+# 3. 레이어 상태 위젯 활성화
+CONFIG_ZMK_WIDGET_LAYER_STATUS=y
 
 CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=8
 CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=8
@@ -26,3 +28,5 @@ CONFIG_ZMK_DONGLE_DISPLAY_DONGLE_BATTERY=y
 
 #macos logo open this config
 #CONFIG_ZMK_DONGLE_DISPLAY_MAC_MODIFIERS=y
+
+
