--- a/config/boards/shields/eyeslash_corne/eyeslash_corne_peripheral_left.conf
+++ b/config/boards/shields/eyeslash_corne/eyeslash_corne_peripheral_left.conf
@@ -31,5 +31,5 @@ CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=3
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
 
 # Display settings
-CONFIG_ZMK_DISPLAY=y
-CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
+#CONFIG_ZMK_DISPLAY=y
+#CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
