--- a/config/boards/shields/eyeslash_corne/eyeslash_corne_peripheral_left.conf
+++ b/config/boards/shields/eyeslash_corne/eyeslash_corne_peripheral_left.conf
@@ -13,10 +13,10 @@ CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
 # Backlight
-CONFIG_ZMK_BACKLIGHT=y
-CONFIG_ZMK_BACKLIGHT_BRT_START=100
-CONFIG_ZMK_BACKLIGHT_ON_START=y
-CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=n
+#CONFIG_ZMK_BACKLIGHT=y
+#CONFIG_ZMK_BACKLIGHT_BRT_START=100
+#CONFIG_ZMK_BACKLIGHT_ON_START=y
+#CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=n
 
 CONFIG_WS2812_STRIP=y
 CONFIG_ZMK_RGB_UNDERGLOW=y
