--- a/config/boards/shields/eyeslash_corne/eyeslash_corne_peripheral_left.conf
+++ b/config/boards/shields/eyeslash_corne/eyeslash_corne_peripheral_left.conf
@@ -13,10 +13,10 @@ CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
 # Backlight
-#CONFIG_ZMK_BACKLIGHT=y
-#CONFIG_ZMK_BACKLIGHT_BRT_START=100
-#CONFIG_ZMK_BACKLIGHT_ON_START=y
-#CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=n
+CONFIG_ZMK_BACKLIGHT=y
+CONFIG_ZMK_BACKLIGHT_BRT_START=100
+CONFIG_ZMK_BACKLIGHT_ON_START=y
+CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=n
 
 CONFIG_WS2812_STRIP=y
 CONFIG_ZMK_RGB_UNDERGLOW=y
@@ -29,7 +29,3 @@ CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=y
 CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=160
 CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=3
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
-
-# Display settings
-#CONFIG_ZMK_DISPLAY=y
-#CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
