--- a/config/eyeslash_corne.conf
+++ b/config/eyeslash_corne.conf
@@ -27,4 +27,9 @@ CONFIG_ZMK_DONGLE_DISPLAY_DONGLE_BATTERY=y
 # macos logo open this config
 CONFIG_ZMK_DONGLE_DISPLAY_MAC_MODIFIERS=y
 
+# zmk keyboard display
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
+CONFIG_ZMK_LV_FONT_DEFAULT_SMALL_MONTSERRAT_26=y
+CONFIG_LV_FONT_DEFAULT_MONTSERRAT_26=y
+
 
