--- a/config/eyeslash_corne.conf
+++ b/config/eyeslash_corne.conf
@@ -18,6 +18,7 @@ CONFIG_ZMK_HID_REPORT_TYPE_NKRO=n
 
 # Display settings
 CONFIG_ZMK_DISPLAY=y
+CONFIG_CUSTOM_ANIMATION_SPEED=2147483647
 
 CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=8
 CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=8
